@@ -1,4 +1,8 @@
-﻿drkns 16.12.2015 19:48:28 +0200 - build 4475
+﻿drkns 16.12.2015 20:53:34 +0200 - build 4476
+
+1. И ещё одно уточнение 4473.
+
+drkns 16.12.2015 19:48:28 +0200 - build 4475
 
 1. Продолжение 4473, учтём пожелания телезрителей.
 
